--- a/HouNou/HouNou.vcxproj
+++ b/HouNou/HouNou.vcxproj
@@ -151,12 +151,14 @@
     <ClInclude Include="D3DUtil.h" />
     <ClInclude Include="DirectInputClass.h" />
     <ClInclude Include="DirectX.h" />
+    <ClInclude Include="Game_GUI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CDirectMusic.cpp" />
     <ClCompile Include="D3DGUIClass.cpp" />
     <ClCompile Include="DirectInputClass.cpp" />
     <ClCompile Include="DirectX.cpp" />
+    <ClCompile Include="Game_GUI.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
