--- a/HouNou/HouNou.vcxproj
+++ b/HouNou/HouNou.vcxproj
@@ -153,6 +153,8 @@
     <ClInclude Include="DirectX.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Game_GUI.h" />
+    <ClInclude Include="Sprite.h" />
+    <ClInclude Include="TileUtil.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CDirectMusic.cpp" />
@@ -162,6 +164,11 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Game_GUI.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Monster.cpp" />
+    <ClCompile Include="PlayerClass.cpp" />
+    <ClCompile Include="SpriteClass.cpp" />
+    <ClCompile Include="StoneClass.cpp" />
+    <ClCompile Include="TileUtil.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
